upgpkg: mediathekview 13.7.1.r152.g178bb58c-1: Upgrade to prerelease of 13.8.0.
As 13.7.1 has been broken with java-runtime > 15 for several months and
upstream has still not released a new (pre-release) version, we pin the latest
commit on the develop branch and build from that instead:
https://github.com/mediathekview/MediathekView/issues/610

Remove the now unneeded --enable-preview flag from the java call in the wrapper
script.

git-svn-id: file:///srv/repos/svn-community/svn@997433 9fca08f4-af9d-4005-b8df-a31f2cc04f65