@@ -1,5 +1,5 @@
 #!/usr/bin/env sh
 
-PATH="/usr/lib/jvm/java-15-openjdk/bin:${PATH}"
+PATH="/usr/lib/jvm/java-16-openjdk/bin:${PATH}"
 # requires preview features: https://github.com/mediathekview/MediathekView/issues/528
-java --enable-preview -jar /usr/share/java/mediathekview/MediathekView.jar "$@"
+java -jar /usr/share/java/mediathekview/MediathekView.jar "$@"
